--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ faster-whisper = "^1.1.0"
 fastapi = "^0.115.5"
 uvicorn = "^0.32.1"
 python-multipart = "^0.0.18"
+torch = "^2.5.1"
 
 
 [build-system]
