--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
 ---
-version: "3"
 services:
   voxtera-backend:
-    image: voxtera-backend:latest
-    command: uvicorn main:app --host 0.0.0.0 --port 8000
+    image: voxtera-backend:v1
     environment:
-      USE_CUDA: true
+      USE_CUDA: false
     ports:
       - "8000:8000"
   voxtera-frontend:
-    image: voxtera-frontend:latest
+    image: voxtera-frontend:v1
     environment:
       VITE_API_ROOT_URL: "http://localhost:8000"
     ports:
