Add authenticated origin pulls

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -55,6 +55,8 @@ http {
         listen [::]:443 ssl http2;
         ssl_certificate /etc/ssl/cert.pem;
         ssl_certificate_key /etc/ssl/key.pem;
+        ssl_client_certificate /etc/ssl/cloudflare.crt;
+        ssl_verify_client on;
 
         server_name voxtera.cameronshaw.me;
         root /usr/share/nginx/html;
