--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -51,8 +51,9 @@ http {
     }
     
     server {
-        listen 443 ssl http2;
-        listen [::]:443 ssl http2;
+        listen 443 ssl;
+        listen [::]:443 ssl;
+	http2 on;
         ssl_certificate /etc/ssl/cert.pem;
         ssl_certificate_key /etc/ssl/key.pem;
         ssl_client_certificate /etc/ssl/cloudflare.crt;
