--- a/k8s/frontend.yml
+++ b/k8s/frontend.yml
@@ -2,36 +2,38 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
+  name: nginx
   labels:
-    app: frontend
+    app: nginx
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: frontend
+      app: nginx
   template:
     metadata:
       labels:
-        app: frontend
+        app: nginx
     spec:
       containers:
-        - name: frontend
-          image: voxtera-frontend:v1
-          env:
-            - name: VITE_API_ROOT_URL
-              value: "http://localhost:8000"
+        - name: nginx
+          image: voxtera-nginx:v1
           ports:
-            - containerPort: 3000
+            - containerPort:
+                - 80
+                - 443
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: nginx-service
+  labels:
+    app: nginx
 spec:
+  type: NodePort
   selector:
-    app: frontend
+    app: nginx
   ports:
     - protocol: TCP
-      port: 3000
-      targetPort: 3000
+      port: 443
+      targetPort: 443
