--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -46,7 +46,7 @@ http {
         }
 
         location /transcribe {
-            proxy_pass http://voxtera-backend:8000/transcribe;
+            proxy_pass http://backend:8000/transcribe;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -78,7 +78,7 @@ http {
         }
 
 	location /transcribe {
-            proxy_pass http://voxtera-backend:8000/transcribe;
+            proxy_pass http://backend:8000/transcribe;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
