--- a/k8s/frontend.yml
+++ b/k8s/frontend.yml
@@ -17,23 +17,60 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: voxtera-nginx:v1
+          image: voxtera-frontend:v1
           ports:
-            - containerPort:
-                - 80
-                - 443
+            - containerPort: 443
+              hostPort: 443
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: nginx
   labels:
-    app: nginx
+    run: nginx
 spec:
-  type: NodePort
+  selector:
+    app: nginx
+  ports:
+  - port: 80
+    protocol: TCP
+    targetPort: 80
+  type: ClusterIP
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: nginx-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: "nginx"
+spec:
+  rules:
+  - host: voxtera.cameronshaw.me
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: nginx
+            port:
+              number: 80
+  tls:
+  - hosts:
+    - voxtera.cameronshaw.me
+    secretName: nginx-tls-secret.tls
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: standalone-nginx-service
+spec:
   selector:
     app: nginx
   ports:
     - protocol: TCP
-      port: 443
-      targetPort: 443
+      port: 80
+      targetPort: 80
+      nodePort: 30080
+  type: NodePort
