--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -26,6 +26,8 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
+    # Increase allowed file size
+    client_max_body_size 200M;
     server {
         listen 80;
         listen [::]:80;
