--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.2.0",
     "@mui/joy": "^5.0.0-beta.50",
+    "@mui/lab": "^6.0.0-beta.19",
+    "@mui/material": "^6.2.0",
     "@types/node": "^22.10.1",
     "path": "^0.12.7",
     "react": "^18.3.1",
